♻️  refactor(app): fix 500 link and header align

--- a/src/app/renderer/PageShell.scss
+++ b/src/app/renderer/PageShell.scss
@@ -1,16 +1,17 @@
 :root {
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-	line-height: 1.5;
 	font-weight: 400;
-
+	line-height: 1.5;
 	color: #222;
-	background-color: #ffffff;
+	text-size-adjust: 100%;
+	text-rendering: optimizelegibility;
 
-	font-synthesis: none;
-	text-rendering: optimizeLegibility;
+	background-color: #fff;
+
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	-webkit-text-size-adjust: 100%;
+
+	font-synthesis: none;
 }
 
 body {
@@ -25,7 +26,7 @@ body {
 
 header {
 	display: flex;
-	justify-content: flex-end;
+	justify-content: flex-start;
 	background-color: #673ab8;
 }
 
@@ -34,8 +35,8 @@ header nav {
 }
 
 header a {
-	color: #fff;
 	padding: 0.75rem;
+	color: #fff;
 	text-decoration: none;
 }
 
@@ -48,15 +49,17 @@ header a:hover {
 }
 
 main {
-	flex: auto;
 	display: flex;
+	flex: auto;
 	align-items: center;
+
 	max-width: 1280px;
 	margin: 0 auto;
+
 	text-align: center;
 }
 
-@media (max-width: 639px) {
+@media (width <= 639px) {
 	#app {
 		margin: 2rem;
 	}
